# AgentPractice

./: README.md  SyncBranches.bat  all-configs-2026-02-19.json
tauri-agent-demo/: .gitignore  InstallXterm.ps1  KillBackend.bat  QUICK_START.md  README.md  Restart.bat  Run.bat  RunDynamic.ps1  SetupEnv.bat  SetupEnv.command  SetupEnv.ps1  StartBackend.bat  StartFrontend.bat  app_config.json  ast_settings.json  chat_app.db  git-commit.command  index.html  install-nodejs.command  package-lock.json  package.json  run.command  setup-mac.command  start-backend.command  start-frontend.command  tauri-agent-backend.spec  tools_config.json
tauri-agent-demo/docs/: agent-architecture-upgrade.md  http-request-response-matching.md  llm-session-management.md  message-assembly-logic.md  multi-agent-collaboration-framework.md  multi-agent-implementation-plan.md  openai_api_guide.md  openai_api_json_schema.md  streaming-database-update.md  streaming-vs-non-streaming.md
tauri-agent-demo/python-backend/: agent_instances.py  agent_team.py  app_config.py  ast_file_filter.py  ast_index.py  ast_settings.py  chat_app.db  code_map.py  context_compress.py  context_estimate.py  database.py  ghost_snapshot.py  llm_client.py  main.py  mcp_client.py  mcp_demo_server.py  mcp_tools.py  models.py  (+11 more)
tauri-agent-next/: .gitignore  QUICK_START.md  README.md  StartBackend.bat  StartDesktop.bat  StartDev.bat  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
tauri-agent-next/src-tauri/: Cargo.toml  tauri.conf.dev.json
tauri-agent-next/src-tauri/src/: lib.rs  main.rs
(+294 files in other folders)
