[package]
name = "tauri-agent-next"
version = "0.1.0"
description = "tauri-agent-next frontend shell"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_agent_next_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
